# mini-agent

./: Makefile  README.md  pyproject.toml
api/: main.py
api/api/agents/calculator/: calculator.py
llms/llama_index/agents/arithmetic/: agent.py
llms/llama_index/agents/calculator/: calculator.py
llms/llama_index/output_parser/arithmetic/: output_parser.py
llms/llama_index/vector_store/pinecone/: client.py
tests/: conftest.py
tests/test_utils/: test_calculator.py
utils/: __init__.py  calculator.py  calculator_tool_spec.py
