[tool.poetry]
name = "mini-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
llama-index = "^0.10.43"
llama-index-core = "0.10.43"
llama-index-llms-openai = "^0.1.22"
llama-index-embeddings-openai = "^0.1.10"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
