[tool.poetry]
name = "mini-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pinecone-client = ">=3.0.2,<4.0.0"
llama-index-vector-stores-pinecone = "^0.1.7"
llama-index-core = ">=0.10.43"
llama-index-llms-openai = "^0.1.22"
llama-index-embeddings-openai = "^0.1.10"
llama-index-agent-openai-legacy = "^0.1.6"
llama-index-agent-openai = "^0.2.7"
llama-index-packs-agents-coa = "^0.1.0"
scikit-learn = "1.2.2"
arize-phoenix = ">=3.0.3"
llama-index-callbacks-arize-phoenix = "^0.1.5"
openinference-instrumentation-llama-index = ">=2"
opentelemetry-proto = ">=1.12.0"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
torch = "2.2.2"
llama-index-postprocessor-colbert-rerank = "^0.1.3"
llama-index-retrievers-bm25 = "^0.1.3"
llama-index-postprocessor-cohere-rerank = "^0.1.7"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
